--- a/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/polar.mdx
@@ -126,7 +126,7 @@ You can then test the payment flow:
 4. Complete the payment.
 5. You should be redirected back to the checkout success page.
 
-To verify everything executed correctly we will:
+To verify everything executed correctly you can:
 1. Check Polar webhook event logs.
 2. Inspect our database's `User` table.
 
