--- a/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/polar.mdx
@@ -120,7 +120,7 @@ Before testing payments, make sure that you:
 
 You can then test the payment flow:
 
-1. Click a Buy button for any product on the homepage.
+1. Click a `Buy` button for any product on the homepage.
 2. You should be redirected to Polar's checkout page.
 3. Fill in the checkout form with [test payment information](https://docs.polar.sh/integrate/sandbox#testing-payments).
 4. Complete the payment.
