--- a/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
@@ -212,8 +212,7 @@ With the webhook URL ready, in your [Polar Dashboard](https://polar.sh/dashboard
    - `order.paid`
    - `subscription.updated`
 6. Click `Save`.
-7. Copy the generated webhook secret (a long, random string starting with `polar_whs_`).
-8. Add this signing secret to your server's production environment variables under `POLAR_WEBHOOK_SECRET`.
+7. Copy the generated webhook secret and set it as the `POLAR_WEBHOOK_SECRET` environment variable in production.
 
 ## Deploying your Blog
 
