--- a/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/index.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/Payment Integrations/index.mdx
@@ -6,7 +6,7 @@ banner:
 ---
 import { TabItem, Tabs } from '@astrojs/starlight/components';
 
-This guide will show you how to set up Payments for testing and local development with the following payment processors:
+This guide will show you how to set up payments for testing and local development with the following payment processors:
 - Stripe
 - Lemon Squeezy
 - Polar
