--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/stripe.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/stripe.mdx
@@ -12,7 +12,7 @@ import switchPlans from '@assets/stripe/switch-plans.png';
 import testProduct from '@assets/stripe/test-product.png';
 import { Image } from 'astro:assets';
 
-First, make sure you've defined your payment processor in `src/payment/paymentProcessor.ts`, as described in the [important first steps](#important-first-steps).
+First, make sure you've defined your payment processor in `src/payment/paymentProcessor.ts`, as described in the [important first steps](/guides/payment-integrations/).
 
 Next, you'll need to create a Stripe account. You can do that [here](https://dashboard.stripe.com/register).
 
