--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
@@ -31,7 +31,7 @@ To enable sandbox mode, make sure that `POLAR_SANDBOX_MODE` is set to `true` in 
 POLAR_SANDBOX_MODE=true
 ```
 
-When you're ready to go live, make sure this is set to `false`.
+When you're ready to [deploy your app](/guides/deploying/), we'll remind you to set this to `false`.
 
 ### Create Polar Organization Access Token
 
