--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
@@ -40,7 +40,7 @@ You can do that by:
 1. Navigating to the `Developers` section under the `Settings > General` page.
 2. Click on the `New Token` button to create a new token.
 3. Give your token a name (e.g., "Open SaaS Development").
-4. Select an expiration date. `No expiration` is fine for sandbox mode, but discouraged for live mode.
+4. Select an expiration date. `No expiration` is fine for sandbox mode, but discouraged for production mode.
 5. Select the minimal scope necessary:
    - `checkouts:write`
    - `customer_sessions:write`
