--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
@@ -8,13 +8,13 @@ tags:
   - indiehackers
 authors: milica
 ---
-import VideoPlayer from '../../../components/VideoPlayer.astro';
 import { Image } from 'astro:assets';
 import landing from '../../../assets/turboreel/landing.webp';
-import studioInterface from '../../../assets/turboreel/studio-interface.mp4';
 import opensaas from '../../../assets/turboreel/opensaas.mp4';
-import reddit100Users from '../../../assets/turboreel/reddit-100-users.webp'
-import reddit200Upvotes from '../../../assets/turboreel/reddit-200-upvotes.webp'
+import reddit100Users from '../../../assets/turboreel/reddit-100-users.webp';
+import reddit200Upvotes from '../../../assets/turboreel/reddit-200-upvotes.webp';
+import studioInterface from '../../../assets/turboreel/studio-interface.mp4';
+import VideoPlayer from '../../../components/VideoPlayer.astro';
 
 Peter is the creator of [**TurboReel**](https://turboreelgpt.tech/), an open-source platform with a paid SaaS layer, that transforms how creators generate short-form video content. With just a prompt, users can produce polished TikToks and YouTube Shorts in moments.
 
@@ -116,7 +116,7 @@ app myApp {
 
 ### Out-of-the-box Stripe integration
 
-Another significant advantage for Peter was how Open SaaS handled third-party integrations. Setting up services like [**Stripe for payments**](https://docs.opensaas.sh/guides/payments-integration/) often requires a lot of effort, but Wasp's Open SaaS streamlined the process - you just need to add your API key and you're good to go.
+Another significant advantage for Peter was how Open SaaS handled third-party integrations. Setting up services like [**Stripe for payments**](https://docs.opensaas.sh/guides/payment-integrations/) often requires a lot of effort, but Wasp's Open SaaS streamlined the process - you just need to add your API key and you're good to go.
 
 > *"Payments are usually a huge headache, but Open SaaS made it so smooth. I didn't have to spend weeks integrating Stripe—it just worked. That gave me more time to focus on TurboReel's core functionality.*"
 
