--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/index.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/index.mdx
@@ -93,3 +93,8 @@ Follow the steps for your selected processor:
 - [Stripe](stripe/)
 - [Lemon Squeezy](lemon-squeezy/)
 - [Polar](polar/)
+
+
+## Deploying
+
+Once you're ready to deploy your app, follow the steps from the [deploying guide](/guides/deploying/) to set up the production settings for your prayment provider.
