--- a/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
@@ -185,9 +185,9 @@ To set up your Polar webhook, you'll need the URL of your newly deployed server 
 With the webhook URL ready, in your [Polar Dashboard](https://polar.sh/dashboard):
 1. Navigate to `Settings > Webhooks`.
 2. Click the `Add Endpoint` button.
-3. Paste the webhook forwarding URL in the `URL` field.
+3. In the URL field, paste your production forwarding address.
 4. Set the `Format` to `"Raw"`.
-5. Select at least the following events to be sent:
+5. Select the following events to listen for:
    - `order.paid`
    - `subscription.updated`
 6. Click `Save`.
