--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
@@ -56,7 +56,9 @@ To create a test product, go to the test products url [https://app.lemonsqueezy.
    - We've set you up with two example subscription product environment variables, `PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID` and `PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID`.
    - As well as a one-time payment product/credits-based environment variable, `PAYMENTS_CREDITS_10_PLAN_ID`.
 
-Note that if you change the names of the these environment variables, you'll need to update your app code to match these names as well.
+:::note[Naming products differently]
+Note that if you change names of your products, you'll need to update your app code to match these names as well.
+:::
 
 ### Create and Use the Lemon Squeezy Webhook in Local Development
 
