--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/stripe.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/stripe.mdx
@@ -47,7 +47,9 @@ To create a test product, go to the test products url [https://dashboard.stripe.
 
 If you intend to let your users switch between two subscription plans, e.g. upgrade from hobby to pro, you'll need to create two separate products with their own price IDs. The ability for users to swich plans can then be configured later in the [Customer Portal](#set-up-the-customer-portal).
 
-Note that if you change the names of the price IDs, you'll need to update your server code to match these names as well.
+:::note[Naming products differently]
+Note that if you change names of your products, you'll need to update your app code to match these names as well.
+:::
 
 ### Create a Test Customer
 
