--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
@@ -125,10 +125,10 @@ You can then test the payment flow:
 To verify everything executed correctly you can:
 - Check Polar webhook event logs:
   1. Navigate to `Settings > Webhooks` page
-  2. Click the `Details` button of our previously created webhook.
+  2. Click the `Details` button of your previously created webhook.
   3. Confirm all of the events have been successful:
      <Image src={polarWebhookLogs} alt="How to check webhook logs in Polar dashboard" loading="lazy" />
-- Inspect our database's `User` table:
+- Inspect your database's `User` table:
   1. Run Wasp DB studio:
      ```sh
      wasp db studio
